# accountsservice

./: .gitlab-ci.yml  README.md  generate-version.sh  meson.build  meson_options.txt
.ci/: gcovr  run-tests.sh
data/: accounts-daemon.service.in
debian/: accountsservice.dirs  accountsservice.install  changelog  control  libaccountsservice0.symbols  rules
debian/patches/: 0002-create-and-manage-groups-like-on-a-debian-system.patch  assume-version-from-d-changelog.patch  fix-obs-build-error.patch  git_default_gdm.patch  git_user_manager.patch  no-check-format.patch  series  tests-s-assertEquals-assertEqual.patch
doc/libaccountsservice/: libaccountsservice-sections.txt
po/: POTFILES.in  ca.po  fur.po  hi.po  hr.po  hu.po  ka.po
src/: accounts-daemon.h  daemon.c  daemon.h  extensions.c  fgetpwent.c  main.c  meson.build  types.h  user-classify.c  user-classify.h  user.c  user.h  util.c  util.h  wtmp-helper.c  wtmp-helper.h
src/libaccountsservice/: act-user-manager.c  act-user-manager.h  act-user-private.h  act-user.c  act-user.h  act.h
tests/: check-format.sh  meson.build  test-daemon.py  test-libaccountsservice.py  uncrustify.cfg  util.c
tests/data/etc/: group  passwd  shadow
tests/data/var/lib/AccountsService/users/: benedict.in  gdm  rupert.in
tests/dbusmock/: accounts_service.py
